// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`optionSelector > should work onChang - first selector 1`] = `[Function]`;

exports[`optionSelector > should work onChang - second selector 1`] = `[Function]`;

exports[`optionSelector > should work readonly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__12opk3l0"
    >
      <label
        class="styles_default__17td3g90 styles__12opk3l2 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodyStrong__m4c9ows style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
      >
        Region
      </label>
      <div
        class="styles__12opk3l4 styles__uf6pag0"
      >
        <div
          aria-controls="_r_1m_"
          aria-describedby="_r_1m_"
          class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
          tabindex="-1"
        >
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          >
            <div
              aria-controls="_r_1m_"
              aria-expanded="false"
              class="selectBar__1ba7knd6 selectBar__1ba7knd5 selectBar_readOnly_true__1ba7knd9 selectBar_size_large__1ba7knda selectBar_state_neutral__1ba7knde"
              data-disabled="false"
              data-readonly="true"
              data-testid="first-selector"
              id="_r_1l_"
              role="combobox"
              tabindex="0"
            >
              <span
                class="selectBar__1ba7knd4 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_weak__m4c9owa style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_27__m4c9ow23 style_undefined_compound_75__m4c9ow3f"
              >
                Select item
              </span>
              <div
                class="selectBar_large__1ba7knd2 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
              >
                <svg
                  aria-label="show dropdown"
                  class="styles__vbm0wq0 styles_disabled_true__vbm0wq2 styles_prominence_default__vbm0wq3 styles_sentiment_neutral__vbm0wq9 styles_size_small__vbm0wqg styles_undefined_compound_2__vbm0wqm"
                  viewBox="0 0 16 16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`optionSelector > should work with default props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__12opk3l0"
    >
      <label
        class="styles_default__17td3g90 styles__12opk3l2 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodyStrong__m4c9ows style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
      >
        Region
      </label>
      <div
        class="styles__12opk3l4 styles__uf6pag0"
      >
        <div
          aria-controls="_r_2_"
          aria-describedby="_r_2_"
          class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
          tabindex="-1"
        >
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          >
            <div
              aria-controls="_r_2_"
              aria-expanded="false"
              class="selectBar__1ba7knd6 selectBar__1ba7knd5 selectBar_size_large__1ba7knda selectBar_state_neutral__1ba7knde"
              data-disabled="false"
              data-readonly="false"
              data-testid="first-selector"
              id="_r_1_"
              role="combobox"
              tabindex="0"
            >
              <span
                class="selectBar__1ba7knd4 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_weak__m4c9owa style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_27__m4c9ow23 style_undefined_compound_75__m4c9ow3f"
              >
                Select item
              </span>
              <div
                class="selectBar_large__1ba7knd2 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
              >
                <svg
                  aria-label="show dropdown"
                  class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_sentiment_neutral__vbm0wq9 styles_size_small__vbm0wqg styles_undefined_compound_34__vbm0wq1i"
                  viewBox="0 0 16 16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`optionSelector > should work with default values 1`] = `[Function]`;

exports[`optionSelector > should work with disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <fieldset
      class="styles__12opk3l0"
    >
      <label
        class="styles_default__17td3g90 styles__12opk3l2 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodyStrong__m4c9ows style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
      >
        Region
      </label>
      <div
        class="styles__12opk3l4 styles__uf6pag0"
      >
        <div
          aria-controls="_r_1g_"
          aria-describedby="_r_1g_"
          class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
          tabindex="-1"
        >
          <div
            class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
          >
            <div
              aria-controls="_r_1g_"
              aria-expanded="false"
              class="selectBar__1ba7knd6 selectBar__1ba7knd5 selectBar_disabled_true__1ba7knd7 selectBar_size_large__1ba7knda selectBar_state_neutral__1ba7knde"
              data-disabled="true"
              data-readonly="false"
              data-testid="first-selector"
              id="_r_1f_"
              role="combobox"
              tabindex="0"
            >
              <span
                class="selectBar__1ba7knd4 style__m4c9ow0 style_disabled_true__m4c9ow2 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_weak__m4c9owa style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_63__m4c9ow33"
              >
                Select item
              </span>
              <div
                class="selectBar_large__1ba7knd2 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
              >
                <svg
                  aria-label="show dropdown"
                  class="styles__vbm0wq0 styles_disabled_true__vbm0wq2 styles_prominence_default__vbm0wq3 styles_sentiment_neutral__vbm0wq9 styles_size_small__vbm0wqg styles_undefined_compound_2__vbm0wqm"
                  viewBox="0 0 16 16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </fieldset>
  </div>
</DocumentFragment>
`;

exports[`optionSelector > should work with error - first selector 1`] = `[Function]`;

exports[`optionSelector > should work with error - first selector 2`] = `[Function]`;

exports[`optionSelector > should work with only one option 1`] = `[Function]`;
